# dolma-count-streamlit

./: BLOGPOST.md  Makefile  README.md  environment.yml  pyproject.toml
data/raw/: README
notebook/: CollateWordCounts.ipynb  MostFrequentWords.ipynb  WordCountExperiments.ipynb  WordCounts.ipynb
src/: streamlit_app.py
src/dolma_count/: books_count.sh  count_utils.py  s2_count.sh  wiki_count.sh
src/resources/: top_words.csv  wiki_word_counts.csv
