[tool.poetry]
name = "dolma-count-streamlit"
version = "0.1.0"
description = "AI2 Dolma word counts"
authors = [
    "Zachary Levonian <levon003@umn.edu>"
]
license = "MIT"
readme = "README.md"
packages = [{include = "dolma_count", from = "src"}]
repository = "https://github.com/levon003/dolma-count-streamlit.git"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
poetry = "1.4.0"
streamlit = "^1.23.1"
pandas = "^2.0.2"
argon2-cffi = "^21.3.0"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
black = "^22.12.0"
isort = "^5.12"
flake8 = "^6.0.0"
nbqa = "^1.6.0"
pre-commit = "^2.21.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
jupyterlab = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .github
    | .gitignore
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | venv
    | _build
    | buck-out
    | build
    | ci
    | data
    | dist
    | docs
    | docsrc
  )/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
virtual_env = "venv"
